Added clarity around confusion matrix
Added a brief description of the confusion matrix and the labeling used in this data.

--- a/ExploringData.ipynb
+++ b/ExploringData.ipynb
@@ -871,7 +871,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Notebook output refined:**\n",
+    "##### **Notebook output refined:**\n",
     "##### Removed extensive processing logs that were initially added to track progress during a time-consuming computational task, while preserving the complete original results.  \n",
     "- Final results of the run are located below.\n",
     "- [Link to the detailed log file](data/TrainingLogs.txt)"
@@ -900,7 +900,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create confusion matrix for each model with best GridSearchCV parameters"
+    "#### Create confusion matrix for each model with best GridSearchCV parameters\n",
+    "\n",
+    "- \"0\" = Not Fake\n",
+    "- \"1\" = Fake\n",
+    "\n",
+    "#### Confusion Matrix Explained\n",
+    "\n",
+    "A confusion matrix visualizes a classification model's performance by showing:\n",
+    "- True Positives (correctly predicted positive cases)\n",
+    "- True Negatives (correctly predicted negative cases)\n",
+    "- False Positives (incorrectly predicted positive)\n",
+    "- False Negatives (incorrectly predicted negative)\n",
+    "\n",
+    "Helps assess model accuracy, precision, recall, and error rates in one compact table."
    ]
   },
   {
