updated log location

--- a/ExploringData.ipynb
+++ b/ExploringData.ipynb
@@ -874,7 +874,7 @@
     "##### **Notebook output refined:**\n",
     "##### Removed extensive processing logs that were initially added to track progress during a time-consuming computational task, while preserving the complete original results.  \n",
     "- Final results of the run are located below.\n",
-    "- [Link to the detailed log file](data/TrainingLogs.txt)"
+    "- [Link to the detailed log file](logs/TrainingLogs.txt)"
    ]
   },
   {
