Updated to final capstone project.
Reorganized the structure for handling additional notebooks.  Updated readme to contain better information for non-technical audiences.  Added new notebook for final analyisis.

--- a/notebooks/ExploringData.ipynb
+++ b/notebooks/ExploringData.ipynb
@@ -29,7 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import and Setup"
+    "### Data Import and Setup\n",
+    "\n",
+    "In this section, we import the necessary libraries and load the dataset for exploration and preprocessing.\n"
    ]
   },
   {
@@ -250,7 +252,7 @@
     }
    ],
    "source": [
-    "# Remove category as it provides no useful information\n",
+    "# Remove category as it provides no useful information and would make the model less versitile as many reviews do not contain a catgeory.\n",
     "\n",
     "df = df.drop(columns=['category'])\n",
     "df.head()"
@@ -687,7 +689,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### It appears there is not a strong correlation between the sentiment and the rating.  Based on this information, we will continue using sentiment in our analysis."
+    "### Insights from Sentiment Analysis\n",
+    "\n",
+    "Our analysis indicates no strong correlation between sentiment and rating. Despite this, sentiment will be included in the model as a feature, as it may provide additional context."
    ]
   },
   {
@@ -718,7 +722,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prepare the data for training and testing\n"
+    "### Feature Engineering and Dataset Preparation\n",
+    "\n",
+    "This section defines the features and target variable, prepares the dataset for training and testing, and applies the TF-IDF transformation to extract textual features from the `cleaned_text` column. Key steps include:\n",
+    "\n",
+    "- **Defining Features and Target**: Use `cleaned_text`, `rating`, and `sentiment_score` as features (`X`) and `label_binary` as the target (`y`).\n",
+    "- **Dataset Splitting**: Split the dataset into training and testing sets with a 75-25 ratio.\n",
+    "- **TF-IDF Transformation**: Extract and transform textual features into a numerical format using the TF-IDF vectorizer.\n",
+    "- **Combining Features**: Concatenate TF-IDF features with additional numerical features (`rating` and `sentiment_score`) to create the final dataset for model training and evaluation.\n"
    ]
   },
   {
@@ -758,7 +769,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Evaluation "
+    "### Model Evaluation\n",
+    "\n",
+    "- **Accuracy**: Measures the overall correctness of predictions.\n",
+    "- **Precision**: Focuses on how many predicted positives were correct.\n",
+    "- **Recall**: Indicates how well the model identifies true positives.\n"
    ]
   },
   {
@@ -874,7 +889,7 @@
     "##### **Notebook output refined:**\n",
     "##### Removed extensive processing logs that were initially added to track progress during a time-consuming computational task, while preserving the complete original results.  \n",
     "- Final results of the run are located below.\n",
-    "- [Link to the detailed log file](logs/TrainingLogs.txt)"
+    "- [Link to the detailed log file](../logs/TrainingLogs.txt)"
    ]
   },
   {
@@ -883,15 +898,15 @@
    "source": [
     "#### GridSearchCV results for each model along with accuracy scoring for each model\n",
     "\n",
-    "- Logistic Regression model fitted.\n",
+    "- **Logistic Regression model fitted**\n",
     "    - Best parameters for Logistic Regression: {'C': 10, 'solver': 'lbfgs'}\n",
     "    - Best score for Logistic Regression: 0.8718\n",
     "\n",
-    "- SVM model fitted.\n",
+    "- **SVM model fitted**\n",
     "    - Best parameters for SVM: {'C': 10, 'gamma': 'scale', 'kernel': 'rbf'}\n",
     "    - Best score for SVM: 0.874\n",
     "\n",
-    "- Random Forest model fitted.\n",
+    "- **Random Forest model fitted**\n",
     "    - Best parameters for Random Forest: {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 200}\n",
     "    - Best score for Random Forest: 0.844\n"
    ]
@@ -902,8 +917,8 @@
    "source": [
     "#### Create confusion matrix for each model with best GridSearchCV parameters\n",
     "\n",
-    "- \"0\" = Not Fake\n",
-    "- \"1\" = Fake\n",
+    "- **\"0\" = Not Fake**\n",
+    "- **\"1\" = Fake**\n",
     "\n",
     "#### Confusion Matrix Explained\n",
     "\n",
@@ -1033,7 +1048,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### SVG selected as best option"
+    "### Model Selection\n",
+    "SVG was chosen as the best model based on the accuracy scores."
    ]
   }
  ],
